# match_my_contacts

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
running_contacts/: config.toml
src/match_my_contacts/: cli.py  config.py
src/match_my_contacts/contacts/: __init__.py  google_people.py  models.py  normalization.py  service.py  storage.py
src/match_my_contacts/matching/: service.py
src/match_my_contacts/race_results/: __init__.py  acn.py  service.py  storage.py
src/match_my_contacts_gui/: __init__.py  config_dialog.py  main_window.py  state.py  table_presenter.py
src/running_contacts/: cli.py  config.py
src/running_contacts/contacts/: google_people.py  storage.py
src/running_contacts/matching/: __init__.py  models.py  normalization.py  service.py
src/running_contacts/race_results/: acn.py  models.py  service.py  storage.py
src/running_contacts_gui/: __init__.py  app.py  main_window.py  table_presenter.py
tests/: conftest.py  test_cli.py  test_config.py  test_contacts_google_people.py  test_contacts_storage.py  test_gui.py  test_gui_app.py  test_matching_service.py  test_race_results_acn.py  test_race_results_storage.py
